fix display forecast bug

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,7 @@
       </div>
     </header>
 
-    <!-- 
-      Now - Section
-     -->
+    <!--Now - Section -->
     <div class="weatherdata__container">
       <section id="now-section">
         <div class="now-section__weather-description">
@@ -74,450 +72,29 @@
         </div>
       </section>
 
-      <!-- 
-      hourly-forecast
-     -->
+      <!-- hourly-forecast -->
 
       <section id="hourly-forecast" class="block--alignment">
         <div class="block__container">
-          <div class="hourly-forecast__title title--margin">
-            Stundenvorhersage
-          </div>
-          <ul class="hourly-forecast__list forecast__list">
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <!-- <div class="hourly-forecast__time forecast__time">3 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">6 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">9 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">12 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">15 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">18 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">21 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">0 Uhr</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li> -->
-            </li>
-          </ul>
+          <div class="title--margin">Stundenvorhersage</div>
+          <ul class="hourly-forecast__list forecast__list"></ul>
         </div>
       </section>
 
-      <!-- 
-      5 Days Forecast section
-    -->
+      <!-- 5 Days Forecast section -->
 
-      <section id="daytime-forecast" class="block--alignment">
+      <section id="five-days-forecast" class="block--alignment">
         <div class="block__container">
-          <div class="daytime-forecast__title title--margin">
-            5-Tage Vorhersage
-          </div>
-          <ul class="hourly-forecast__list forecast__list">
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Morgen</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Dienstag</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Mittwoch</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Donnerstag</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Freitag</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-            <li class="hourly-forecast__list-card forecast__list-card">
-              <div class="hourly-forecast__time forecast__time">Morgen</div>
-              <div class="informations__container">
-                <img
-                  src="./img/icon_fullsun.svg"
-                  alt=""
-                  class="hourly-forecast__icon forecast__icon"
-                />
-                <div class="hourly-forecast__temperature forecast__temperature">
-                  15°C
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-wind icon"></i>
-                <div
-                  class="hourly-forecast__windinformationens forecast__windinformationens"
-                >
-                  10 km/h
-                </div>
-              </div>
-              <div class="informations__container">
-                <i class="fa-solid fa-umbrella icon"></i>
-                <div
-                  class="hourly-forecast__rain-probability forecast__rain-probability"
-                >
-                  60%
-                </div>
-              </div>
-            </li>
-          </ul>
+          <div class="title--margin">5-Tage Vorhersage</div>
+          <ul class="five-days-forecast__list forecast__list"></ul>
         </div>
       </section>
 
-      <!-- 
-      sunrise/sunset section
-     -->
+      <!-- sunrise/sunset section -->
 
       <section id="sunrise-sunset" class="block--alignment">
         <div class="block__container">
-          <div class="sunrise-sunset__title title--margin">
-            Aktueller Sonnenauf- und Untergang
-          </div>
+          <div class="title--margin">Aktueller Sonnenauf- und Untergang</div>
           <div class="sunrise-sunset__group">
             <div class="sunrise__container">
               <img
@@ -541,9 +118,7 @@
         </div>
       </section>
 
-      <!-- 
-      DROP-DOWN__MENU
-      -->
+      <!-- DROP-DOWN__MENU -->
       <div class="drop-down">
         <div class="drop-down-menu__container">
           <div class="search__container">
@@ -557,9 +132,7 @@
               <i class="fa-solid fa-magnifying-glass icon--middle"></i>
             </div>
           </div>
-          <ul class="drop-down__li">
-            <!-- <li class="drop-down__list-entry">Schwerin</li> -->
-          </ul>
+          <ul class="drop-down__li"></ul>
           <div class="drop-down__close-button">
             <i class="fa-solid fa-angle-up icon--middle"></i>
           </div>
