--- a/src/index.html
+++ b/src/index.html
@@ -90,28 +90,28 @@
           <div class="title--margin">Luftverschmutzung</div>
           <div class="air-pollution__content">
             <div class="air-pollution__quality-index">
-              Luftqualität: <span>sehr gut</span>
+              Luftqualität: <span></span>
             </div>
             <div class="air-pollution__details">
               <div class="air-pollution__detail">
                 <div class="air-pollution__title">
                   <b>Stickstoffdioxid (NO2):</b>
                 </div>
-                <div class="air-pollution__no2-value">104 μg/m3</div>
+                <div class="air-pollution__no2-value"></div>
               </div>
               <div class="air-pollution__detail">
                 <div class="air-pollution__title"><b>Feinstaub (PM10):</b></div>
-                <div class="air-pollution__pm10-value">45 μg/m3</div>
+                <div class="air-pollution__pm10-value"></div>
               </div>
               <div class="air-pollution__detail">
                 <div class="air-pollution__title">
                   <b>Feinstaub (PM2.5):</b>
                 </div>
-                <div class="air-pollution__pm2_5-value">45 μg/m3</div>
+                <div class="air-pollution__pm2_5-value"></div>
               </div>
               <div class="air-pollution__detail">
                 <div class="air-pollution__title"><b>Ozon (O3):</b></div>
-                <div class="air-pollution__o3-value">150 μg/m3</div>
+                <div class="air-pollution__o3-value"></div>
               </div>
             </div>
           </div>
