--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,14 @@
     />
   </head>
   <body>
-    <!-- 
-      HEAD
-     -->
+    <!-- HEAD -->
 
     <header class="header">
       <div class="header__container">
         <div class="header__image"></div>
         <div class="header__location-info">
-          <div class="header__location-city">Schwerin</div>
-          <div class="header__location-time">Mittwoch 11:37</div>
+          <div class="header__location-city"></div>
+          <div class="header__location-time"></div>
         </div>
 
         <div class="header__search-bar">
@@ -40,35 +38,26 @@
     <!--Now - Section -->
     <div class="weatherdata__container">
       <section id="now-section">
-        <div class="now-section__weather-description">
-          Aktuell: Nachts weiterhin dunkel!
-        </div>
+        <div class="now-section__weather-description"></div>
         <div class="now-section__container">
           <div class="now-section__content">
-            <div class="now-section__temperature grid-item">19°C</div>
+            <div class="now-section__temperature grid-item"></div>
             <div class="now-section__air-pressure-container grid-item">
               <i class="fa-solid fa-arrow-down-short-wide"></i>
-              <div class="now-section__air-pressure-value">90%</div>
+              <div class="now-section__air-pressure-value"></div>
             </div>
             <div class="now-section__sky-informations-container grid-item">
-              <img
-                class="sky-informations-image"
-                src="./img/icon_sun-with-clouds.svg"
-                alt=""
-              />
+              <img class="sky-informations-image" src="" alt="" />
               <div class="now-section__sky-informations"></div>
             </div>
-            <div class="now-section__feelsLike grid-item">
-              Gefühlt wie <br />
-              17 °C
-            </div>
+            <div class="now-section__feelsLike grid-item"></div>
             <div class="now-section__humidity-container grid-item">
               <i class="fa-solid fa-droplet"></i>
-              <div class="humidity__value">80%</div>
+              <div class="humidity__value"></div>
             </div>
             <div class="now-section__wind-informations-container grid-item">
               <i class="fa-solid fa-wind icon"></i>
-              <div class="wind-informations__value">22 km/h</div>
+              <div class="wind-informations__value"></div>
             </div>
           </div>
         </div>
@@ -140,7 +129,7 @@
                 class="sunrise__image icon--big"
               />
               <div class="sunrise__titel">Sonnenaufgang</div>
-              <div class="sunrise__time">8:22 Uhr</div>
+              <div class="sunrise__time"></div>
             </div>
             <div class="sunset__container">
               <img
@@ -149,7 +138,7 @@
                 class="sunrise__image icon--big"
               />
               <div class="sunset__titel">Sonnenuntergang</div>
-              <div class="sunset__time">15:52 Uhr</div>
+              <div class="sunset__time"></div>
             </div>
           </div>
         </div>
