add theme function

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
       <section id="air-pollution" class="block--alignment">
         <div class="block__container">
-          <div class="title--margin">Luftverschmutzung</div>
+          <div class="title--margin">Luftqualität</div>
           <div class="air-pollution__content">
             <div class="air-pollution__quality-index">
               Luftqualität: <span></span>
