--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <script type="module" src="./js/main.js"></script>
-    <title>weatherbro</title>
+    <title>weatherapp</title>
 
     <meta name="title" content="weatherbro" />
     <meta
