--- a/src/index.html
+++ b/src/index.html
@@ -158,14 +158,17 @@
               <i class="fa-solid fa-magnifying-glass icon--middle"></i>
             </div>
           </div>
-          <ul class="drop-down__li"></ul>
+          <ul class="drop-down__search-list drop-down__list"></ul>
 
           <hr />
 
-          <div class="drop-down__favourites-title">Deine Standorte</div>
-          <ul class="drop-down__favourites-list">
+          <div class="drop-down__favourites-title title--margin">Deine Standorte</div>
+          <ul class="drop-down__favourites-list drop-down__list">
+            <li class="drop-down__list-entry" data-lat="54.4211679" data-lon="13.584369613694054">Binz DE Mecklenburg-Vorpommern</li>
+            <li class="drop-down__list-entry" data-lat="54.4211679" data-lon="13.584369613694054">Binz DE Mecklenburg-Vorpommern</li>
+          </ul>
 
-          <div class="themes__title">Themes</div>
+          <div class="themes__title title--margin">Themes</div>
           <div class="themes__container">
             <div class="themes__container-theme" data-id="100">
               Mystic River
@@ -178,7 +181,6 @@
           <div class="drop-down__close-button">
             <i class="fa-solid fa-angle-up icon--middle"></i>
           </div>
-        </ul>
       </div>
     </div>
   </body>
