add change-theme functionality

--- a/src/index.html
+++ b/src/index.html
@@ -170,12 +170,12 @@
 
           <div class="themes__title title--margin">Themes</div>
           <div class="themes__container">
-            <div class="themes__container-theme" data-id="100">
+            <!-- <div class="themes__container-theme" data-id="100">
               Mystic River
             </div>
             <div class="themes__container-theme" data-id="100"></div>
             <div class="themes__container-theme" data-id="100"></div>
-            <div class="themes__container-theme" data-id="100"></div>
+            <div class="themes__container-theme" data-id="100"></div> -->
           </div>
 
           <div class="drop-down__close-button">
