update theme logic

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
     <script type="module" src="./js/main.js"></script>
     <title>weatherapp</title>
 
-    <meta name="title" content="weatherbro" />
+    <meta name="title" content="weatherapp" />
     <meta
       name="description"
-      content="weatherbro is a weather app made by Tony Heider"
+      content="weatherapp is a weather app made by Tony Heider"
     />
   </head>
   <body>
@@ -162,25 +162,33 @@
 
           <hr />
 
-          <div class="drop-down__favourites-title title--margin">Deine Standorte</div>
+          <div class="drop-down__favourites-title title--margin">
+            Deine Standorte
+          </div>
           <ul class="drop-down__favourites-list drop-down__list">
-            <li class="drop-down__list-entry" data-lat="54.4211679" data-lon="13.584369613694054">Binz DE Mecklenburg-Vorpommern</li>
-            <li class="drop-down__list-entry" data-lat="54.4211679" data-lon="13.584369613694054">Binz DE Mecklenburg-Vorpommern</li>
+            <li
+              class="drop-down__list-entry"
+              data-lat="54.4211679"
+              data-lon="13.584369613694054"
+            >
+              Binz DE Mecklenburg-Vorpommern
+            </li>
+            <li
+              class="drop-down__list-entry"
+              data-lat="54.4211679"
+              data-lon="13.584369613694054"
+            >
+              Binz DE Mecklenburg-Vorpommern
+            </li>
           </ul>
 
           <div class="themes__title title--margin">Themes</div>
-          <div class="themes__container">
-            <!-- <div class="themes__container-theme" data-id="100">
-              Mystic River
-            </div>
-            <div class="themes__container-theme" data-id="100"></div>
-            <div class="themes__container-theme" data-id="100"></div>
-            <div class="themes__container-theme" data-id="100"></div> -->
-          </div>
+          <div class="themes__container"></div>
 
           <div class="drop-down__close-button">
             <i class="fa-solid fa-angle-up icon--middle"></i>
           </div>
+        </div>
       </div>
     </div>
   </body>
