--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
       <section id="hourly-forecast" class="block--alignment">
         <div class="block__container">
           <div class="title--margin">Stundenvorhersage</div>
-          <ul class="hourly-forecast__list forecast__list"></ul>
+          <ul class="hourly-forecast__list forecast__list modul--blur"></ul>
         </div>
       </section>
 
@@ -77,7 +77,7 @@
       <section id="air-pollution" class="block--alignment">
         <div class="block__container">
           <div class="title--margin">Luftqualität</div>
-          <div class="air-pollution__content">
+          <div class="air-pollution__content modul--blur">
             <div class="air-pollution__quality-index">
               Luftqualität: <span></span>
             </div>
@@ -112,7 +112,7 @@
       <section id="five-days-forecast" class="block--alignment">
         <div class="block__container">
           <div class="title--margin">5-Tage Vorhersage</div>
-          <ul class="five-days-forecast__list forecast__list"></ul>
+          <ul class="five-days-forecast__list forecast__list modul--blur"></ul>
         </div>
       </section>
 
@@ -121,7 +121,7 @@
       <section id="sunrise-sunset" class="block--alignment">
         <div class="block__container">
           <div class="title--margin">Aktueller Sonnenauf- und Untergang</div>
-          <div class="sunrise-sunset__group">
+          <div class="sunrise-sunset__group modul--blur">
             <div class="sunrise__container">
               <img
                 src="./img/icon_sunrise.png"
