add bookmark sign + dispay functionality

--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,18 @@
         <div class="header__image"></div>
         <div class="header__location-info">
           <div class="header__location-city"></div>
+          <!-- <div class="header__location-city"></div> -->
           <div class="header__location-time"></div>
+          <!-- <i class="fa-regular fa-bookmark icon"></i>
+          <i class="fa-solid fa-bookmark icon"></i> -->
         </div>
 
         <div class="header__search-bar">
           <button class="current-location__button">
             <i class="fa-solid fa-bars icon--middle"></i>
+          </button>
+          <button class="bookmark__button">
+            <i class="fa-regular fa-bookmark icon--middle"></i>
           </button>
         </div>
       </div>
@@ -47,7 +53,7 @@
               <div class="now-section__air-pressure-value"></div>
             </div>
             <div class="now-section__sky-informations-container grid-item">
-              <img class="sky-informations-image" src="" alt="" />
+              <img class="sky-informations-image" src="#" alt="" />
               <div class="now-section__sky-informations"></div>
             </div>
             <div class="now-section__feelsLike grid-item"></div>
