correct display of bookmark entries

--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,9 @@
           <hr />
 
           <div class="drop-down__favourites-title title--margin">
-            Deine Standorte
+            Deine Standorte <br />
+            <br />
+            <i>Du hast noch keine Standorte hinzugefügt.</i>
           </div>
           <ul class="drop-down__favourites-list drop-down__list"></ul>
           <div class="drop-down__themes">
