bug fixing - saving bookmarks

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <div class="header__image"></div>
         <div class="header__location-info">
           <div class="header__location-city"></div>
-          <!-- <div class="header__location-city"></div> -->
+          <div class="header__location-city-sub">Teststadt</div>
           <div class="header__location-time"></div>
           <!-- <i class="fa-regular fa-bookmark icon"></i>
           <i class="fa-solid fa-bookmark icon"></i> -->
