--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link rel="manifest" href="manifest.webmanifest" />
     <script type="module" src="./js/main.js"></script>
     <title>weatherapp</title>
 
@@ -24,10 +25,8 @@
         <div class="header__image"></div>
         <div class="header__location-info">
           <div class="header__location-city"></div>
-          <div class="header__location-city-sub">Teststadt</div>
+          <div class="header__location-city-sub"></div>
           <div class="header__location-time"></div>
-          <!-- <i class="fa-regular fa-bookmark icon"></i>
-          <i class="fa-solid fa-bookmark icon"></i> -->
         </div>
 
         <div class="header__search-bar">
@@ -82,7 +81,7 @@
 
       <section id="air-pollution" class="block--alignment">
         <div class="block__container">
-          <div class="title--margin">Luftqualität</div>
+          <div class="title--margin">Luftverschmutzung</div>
           <div class="air-pollution__content modul--blur">
             <div class="air-pollution__quality-index">
               Luftqualität: <span></span>
