--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="manifest.json" />
     <script type="module" src="./js/main.js"></script>
     <title>weatherapp</title>
 
     <meta name="title" content="weatherapp" />
+
     <meta
       name="description"
       content="weatherapp is a weather app made by Tony Heider"
@@ -129,7 +130,7 @@
           <div class="sunrise-sunset__group modul--blur">
             <div class="sunrise__container">
               <img
-                src="./img/icon_sunrise.png"
+                src="./assets/img/icon_sunrise.png"
                 alt=""
                 class="sunrise__image icon--big"
               />
@@ -138,7 +139,7 @@
             </div>
             <div class="sunset__container">
               <img
-                src="./img/icon__halfmoon.png"
+                src="./assets/img/icon__halfmoon.png"
                 alt=""
                 class="sunrise__image icon--big"
               />
