--- a/src/index.html
+++ b/src/index.html
@@ -13,180 +13,183 @@
 
     <meta name="title" content="weatherapp" />
 
-    <meta
-      name="description"
-      content="weatherapp is a weather app made by Tony Heider"
-    />
+    <meta name="description" content="weatherapp - made by Tony Heider" />
   </head>
   <body>
     <!-- HEAD -->
 
-    <header class="header">
-      <div class="header__container">
-        <div class="header__image"></div>
-        <div class="header__location-info">
-          <div class="header__location-city"></div>
-          <div class="header__location-city-sub"></div>
-          <div class="header__location-time"></div>
-        </div>
+    <section class="app-container">
+      <header class="header">
+        <div class="header__container">
+          <div class="header__image"></div>
+          <div class="header__location-info">
+            <div class="header__location-city"></div>
+            <div class="header__location-city-sub"></div>
+            <div class="header__location-time"></div>
+          </div>
 
-        <div class="header__search-bar">
-          <button class="current-location__button">
-            <i class="fa-solid fa-bars icon--middle"></i>
-          </button>
-          <button class="bookmark__button">
-            <i class="fa-regular fa-bookmark icon--middle"></i>
-          </button>
+          <div class="header__search-bar">
+            <button class="current-location__button">
+              <i class="fa-solid fa-bars icon--middle"></i>
+            </button>
+            <button class="bookmark__button">
+              <i class="fa-regular fa-bookmark icon--middle"></i>
+            </button>
+          </div>
+        </div>
+      </header>
+
+      <!--Now - Section -->
+      <div class="weatherdata__container">
+        <section id="now-section">
+          <div class="now-section__weather-description"></div>
+          <div class="now-section__container">
+            <div class="now-section__content">
+              <div class="now-section__temperature grid-item"></div>
+              <div class="now-section__air-pressure-container grid-item">
+                <i class="fa-solid fa-arrow-down-short-wide"></i>
+                <div class="now-section__air-pressure-value"></div>
+              </div>
+              <div class="now-section__sky-informations-container grid-item">
+                <img class="sky-informations-image" src="#" alt="" />
+                <div class="now-section__sky-informations"></div>
+              </div>
+              <div class="now-section__feelsLike grid-item"></div>
+              <div class="now-section__humidity-container grid-item">
+                <i class="fa-solid fa-droplet"></i>
+                <div class="humidity__value"></div>
+              </div>
+              <div class="now-section__wind-informations-container grid-item">
+                <i class="fa-solid fa-wind icon"></i>
+                <div class="wind-informations__value"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- hourly-forecast -->
+
+        <section id="hourly-forecast" class="block--alignment">
+          <div class="block__container">
+            <div class="title--margin">Stundenvorhersage</div>
+            <ul class="hourly-forecast__list forecast__list modul--blur"></ul>
+          </div>
+        </section>
+
+        <!-- Air-pollution -->
+
+        <section id="air-pollution" class="block--alignment">
+          <div class="block__container">
+            <div class="title--margin">Luftverschmutzung</div>
+            <div class="air-pollution__content modul--blur">
+              <div class="air-pollution__quality-index">
+                Luftqualität: <span></span>
+              </div>
+              <div class="air-pollution__details">
+                <div class="air-pollution__detail">
+                  <div class="air-pollution__title">
+                    <b>Stickstoffdioxid (NO2):</b>
+                  </div>
+                  <div class="air-pollution__no2-value"></div>
+                </div>
+                <div class="air-pollution__detail">
+                  <div class="air-pollution__title">
+                    <b>Feinstaub (PM10):</b>
+                  </div>
+                  <div class="air-pollution__pm10-value"></div>
+                </div>
+                <div class="air-pollution__detail">
+                  <div class="air-pollution__title">
+                    <b>Feinstaub (PM2.5):</b>
+                  </div>
+                  <div class="air-pollution__pm2_5-value"></div>
+                </div>
+                <div class="air-pollution__detail">
+                  <div class="air-pollution__title"><b>Ozon (O3):</b></div>
+                  <div class="air-pollution__o3-value"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- 5 Days Forecast section -->
+
+        <section id="five-days-forecast" class="block--alignment">
+          <div class="block__container">
+            <div class="title--margin">5-Tage Vorhersage</div>
+            <ul
+              class="five-days-forecast__list forecast__list modul--blur"
+            ></ul>
+          </div>
+        </section>
+
+        <!-- sunrise/sunset section -->
+
+        <section id="sunrise-sunset" class="block--alignment">
+          <div class="block__container">
+            <div class="title--margin">Aktueller Sonnenauf- und Untergang</div>
+            <div class="sunrise-sunset__group modul--blur">
+              <div class="sunrise__container">
+                <img
+                  src="./assets/img/icon_sunrise.png"
+                  alt=""
+                  class="sunrise__image icon--big"
+                />
+                <div class="sunrise__titel">Sonnenaufgang</div>
+                <div class="sunrise__time"></div>
+              </div>
+              <div class="sunset__container">
+                <img
+                  src="./assets/img/icon__halfmoon.png"
+                  alt=""
+                  class="sunrise__image icon--big"
+                />
+                <div class="sunset__titel">Sonnenuntergang</div>
+                <div class="sunset__time"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- DROP-DOWN__MENU -->
+        <div class="drop-down">
+          <div class="drop-down__container">
+            <div class="search__container">
+              <input
+                type="text"
+                name="searchfield"
+                class="drop-down__searchfield"
+                placeholder="Welchen Ort suchst du?"
+              />
+              <div class="drop-down__search_button">
+                <i class="fa-solid fa-magnifying-glass icon--middle"></i>
+              </div>
+            </div>
+            <ul class="drop-down__search-list drop-down__list"></ul>
+
+            <hr />
+
+            <div class="drop-down__favourites-title title--margin">
+              Deine Standorte <br />
+              <br />
+              <i>Du hast noch keine Standorte hinzugefügt.</i>
+            </div>
+            <ul class="drop-down__favourites-list drop-down__list"></ul>
+            <div class="drop-down__themes">
+              <div class="themes__title title--margin">Themes</div>
+              <div class="themes__content"></div>
+              <!-- <i
+                class="themes__content-scroll-finger fa-solid fa-hand-pointer icon--middle"
+              ></i> -->
+            </div>
+
+            <div class="drop-down__close-button">
+              <i class="fa-solid fa-angle-up icon--middle"></i>
+            </div>
+          </div>
         </div>
       </div>
-    </header>
-
-    <!--Now - Section -->
-    <div class="weatherdata__container">
-      <section id="now-section">
-        <div class="now-section__weather-description"></div>
-        <div class="now-section__container">
-          <div class="now-section__content">
-            <div class="now-section__temperature grid-item"></div>
-            <div class="now-section__air-pressure-container grid-item">
-              <i class="fa-solid fa-arrow-down-short-wide"></i>
-              <div class="now-section__air-pressure-value"></div>
-            </div>
-            <div class="now-section__sky-informations-container grid-item">
-              <img class="sky-informations-image" src="#" alt="" />
-              <div class="now-section__sky-informations"></div>
-            </div>
-            <div class="now-section__feelsLike grid-item"></div>
-            <div class="now-section__humidity-container grid-item">
-              <i class="fa-solid fa-droplet"></i>
-              <div class="humidity__value"></div>
-            </div>
-            <div class="now-section__wind-informations-container grid-item">
-              <i class="fa-solid fa-wind icon"></i>
-              <div class="wind-informations__value"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- hourly-forecast -->
-
-      <section id="hourly-forecast" class="block--alignment">
-        <div class="block__container">
-          <div class="title--margin">Stundenvorhersage</div>
-          <ul class="hourly-forecast__list forecast__list modul--blur"></ul>
-        </div>
-      </section>
-
-      <!-- Air-pollution -->
-
-      <section id="air-pollution" class="block--alignment">
-        <div class="block__container">
-          <div class="title--margin">Luftverschmutzung</div>
-          <div class="air-pollution__content modul--blur">
-            <div class="air-pollution__quality-index">
-              Luftqualität: <span></span>
-            </div>
-            <div class="air-pollution__details">
-              <div class="air-pollution__detail">
-                <div class="air-pollution__title">
-                  <b>Stickstoffdioxid (NO2):</b>
-                </div>
-                <div class="air-pollution__no2-value"></div>
-              </div>
-              <div class="air-pollution__detail">
-                <div class="air-pollution__title"><b>Feinstaub (PM10):</b></div>
-                <div class="air-pollution__pm10-value"></div>
-              </div>
-              <div class="air-pollution__detail">
-                <div class="air-pollution__title">
-                  <b>Feinstaub (PM2.5):</b>
-                </div>
-                <div class="air-pollution__pm2_5-value"></div>
-              </div>
-              <div class="air-pollution__detail">
-                <div class="air-pollution__title"><b>Ozon (O3):</b></div>
-                <div class="air-pollution__o3-value"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- 5 Days Forecast section -->
-
-      <section id="five-days-forecast" class="block--alignment">
-        <div class="block__container">
-          <div class="title--margin">5-Tage Vorhersage</div>
-          <ul class="five-days-forecast__list forecast__list modul--blur"></ul>
-        </div>
-      </section>
-
-      <!-- sunrise/sunset section -->
-
-      <section id="sunrise-sunset" class="block--alignment">
-        <div class="block__container">
-          <div class="title--margin">Aktueller Sonnenauf- und Untergang</div>
-          <div class="sunrise-sunset__group modul--blur">
-            <div class="sunrise__container">
-              <img
-                src="./assets/img/icon_sunrise.png"
-                alt=""
-                class="sunrise__image icon--big"
-              />
-              <div class="sunrise__titel">Sonnenaufgang</div>
-              <div class="sunrise__time"></div>
-            </div>
-            <div class="sunset__container">
-              <img
-                src="./assets/img/icon__halfmoon.png"
-                alt=""
-                class="sunrise__image icon--big"
-              />
-              <div class="sunset__titel">Sonnenuntergang</div>
-              <div class="sunset__time"></div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- DROP-DOWN__MENU -->
-      <div class="drop-down">
-        <div class="drop-down__container">
-          <div class="search__container">
-            <input
-              type="text"
-              name="searchfield"
-              class="drop-down__searchfield"
-              placeholder="Welchen Ort suchst du?"
-            />
-            <div class="drop-down__search_button">
-              <i class="fa-solid fa-magnifying-glass icon--middle"></i>
-            </div>
-          </div>
-          <ul class="drop-down__search-list drop-down__list"></ul>
-
-          <hr />
-
-          <div class="drop-down__favourites-title title--margin">
-            Deine Standorte <br />
-            <br />
-            <i>Du hast noch keine Standorte hinzugefügt.</i>
-          </div>
-          <ul class="drop-down__favourites-list drop-down__list"></ul>
-          <div class="drop-down__themes">
-            <div class="themes__title title--margin">Themes</div>
-            <div class="themes__content"></div>
-            <i
-              class="themes__content-scroll-finger fa-solid fa-hand-pointer icon--middle"
-            ></i>
-          </div>
-
-          <div class="drop-down__close-button">
-            <i class="fa-solid fa-angle-up icon--middle"></i>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
